Fetching data is completely in background services, updates to UI use locally stored objects from service-maintained DB. Conversations now a base object in protocol